--- a/NetCoreCMS.Web/Properties/launchSettings.json
+++ b/NetCoreCMS.Web/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:58053/",
+      "applicationUrl": "http://localhost:60180/",
       "sslPort": 0
     }
   },
@@ -15,13 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "NetCoreCMS": {
+    "NetCoreCMS.Web": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:58054"
+      "applicationUrl": "http://localhost:60181"
     }
   }
 }
