--- a/NetCoreCMS.Web/appsettings.json
+++ b/NetCoreCMS.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-NetCoreCMS-9da71183-28a8-4aa2-9359-5b4b670ab19b;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-NetCoreCMS.Web-06b30c0c-b274-4a89-8d24-6b8969f4b5ef;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
