--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ config
 /NetCoreCMS.Framework/*.user
 /NetCoreCMS.Web/Modules/Core/NetCoreCMS.Modules.Cms/*.user
 /NetCoreCMS.Web/Themes/NetCoreCMS.Theme.Default/*.user
+/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/*.user
