--- a/NetCoreCMS.Web/Themes/Frontend/Default/Frontend.csproj
+++ b/NetCoreCMS.Web/Themes/Frontend/Default/Frontend.csproj
@@ -9,17 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="Backend\Shared\_BackendLayout.cshtml">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-    <Content Include="Frontend\Shared\_FrontendLayout.cshtml">
+    <Content Include="Shared\_FrontendLayout.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Backend\Views\" />
-    <Folder Include="Frontend\Views\" />
+    <Folder Include="Views\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
