Setup UI is completed. Now working on functionalities.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/NetCoreCMS.Modules.Setup.csproj
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/NetCoreCMS.Modules.Setup.csproj
@@ -5,13 +5,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Views\_ViewImports.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="Views\_ViewStart.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\NetCoreCMS.Framework\NetCoreCMS.Framework.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
-    <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
