--- a/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/NetCoreCMS.HelloWorld.csproj
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/NetCoreCMS.HelloWorld.csproj
@@ -9,6 +9,15 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <Content Include="Views\_ViewImports.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="Views\_ViewStart.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+  
+  <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
