renamed theme path

--- a/NetCoreCMS.Web/Themes/Admin/Default/Default.csproj
+++ b/NetCoreCMS.Web/Themes/Admin/Default/Default.csproj
@@ -4,12 +4,8 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-  </PropertyGroup>
-
   <ItemGroup>
-    <Content Include="Shared\_FrontendLayout.cshtml">
+    <Content Include="Shared\_AdminLayout.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
     <Content Include="Views\_ViewImports.cshtml">
