--- a/NetCoreCMS.Web/Themes/Site/Default/Default.csproj
+++ b/NetCoreCMS.Web/Themes/Site/Default/Default.csproj
@@ -4,8 +4,12 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Content Include="Shared\_BackendLayout.cshtml">
+    <Content Include="Shared\_SiteLayout.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
     <Content Include="Views\_ViewImports.cshtml">
