SQLite database create is complete.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/NetCoreCMS.Modules.Cms.csproj
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/NetCoreCMS.Modules.Cms.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Views\CmsHome\About.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Include="Views\CmsHome\Contact.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="Views\_ViewImports.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
