new admin sidebar

--- a/NetCoreCMS.Web/Themes/Admin/Default/Default.csproj
+++ b/NetCoreCMS.Web/Themes/Admin/Default/Default.csproj
@@ -8,6 +8,9 @@
     <Content Include="Shared\_AdminLayout.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Include="Shared\_LoginPartial.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="Views\_ViewImports.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
