--- a/NetCoreCMS.Web/NetCoreCMS.Web.csproj
+++ b/NetCoreCMS.Web/NetCoreCMS.Web.csproj
@@ -60,6 +60,8 @@
     <Folder Include="Data\" />
     <Folder Include="Data\" />
     <Folder Include="Data\" />
+    <Folder Include="Data\" />
+    <Folder Include="Data\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
