View problem fix

--- a/NetCoreCMS.Web/NetCoreCMS.Web.csproj
+++ b/NetCoreCMS.Web/NetCoreCMS.Web.csproj
@@ -62,6 +62,7 @@
     <Folder Include="Data\" />
     <Folder Include="Data\" />
     <Folder Include="Data\" />
+    <Folder Include="Data\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
