After setup application require restart for the very first time. But till now there have no restart support. That is why we uses shutdown.

--- a/NetCoreCMS.Web/NetCoreCMS.Web.csproj
+++ b/NetCoreCMS.Web/NetCoreCMS.Web.csproj
@@ -63,7 +63,15 @@
     <Folder Include="Data\" />
     <Folder Include="Data\" />
     <Folder Include="Data\" />
+    <Folder Include="Data\" />
+    <Folder Include="Data\" />
+    <Folder Include="Data\" />
+    <Folder Include="Data\" />
+    <Folder Include="Data\" />
     <Folder Include="Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Views\Home\SetupSuccess.cshtml" />
   </ItemGroup>
 
 </Project>
