setup error fixed.

--- a/NetCoreCMS.Web/NetCoreCMS.Web.csproj
+++ b/NetCoreCMS.Web/NetCoreCMS.Web.csproj
@@ -61,6 +61,7 @@
     <Folder Include="Data\" />
     <Folder Include="Data\" />
     <Folder Include="Data\" />
+    <Folder Include="Data\" />
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
