default website creation at setup time is complete.

--- a/NetCoreCMS.Web/Themes/Admin/Default/Default.csproj
+++ b/NetCoreCMS.Web/Themes/Admin/Default/Default.csproj
@@ -8,7 +8,7 @@
     <Content Include="Shared\_AdminLayout.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="Shared\_LoginPartial.cshtml">
+    <Content Include="Shared\_AdminLoginPartial.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
     <Content Include="Views\_ViewImports.cshtml">
