--- a/NetCoreCMS.Web/Themes/DefaultDark/DefaultDark.csproj
+++ b/NetCoreCMS.Web/Themes/DefaultDark/DefaultDark.csproj
@@ -12,7 +12,7 @@
     <Content Include="Shared\_SiteLoginPartial.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-    <Content Include="Shared\_SiteLayout.cshtml">
+    <Content Include="Shared\Layouts\_SiteLayout.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
     <Content Include="Views\_ViewImports.cshtml">
