--- a/NetCoreCMS.Web/NetCoreCMS.Web.csproj
+++ b/NetCoreCMS.Web/NetCoreCMS.Web.csproj
@@ -74,6 +74,7 @@
     <ProjectReference Include="..\NetCoreCMS.Framework\NetCoreCMS.Framework.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Lib\" />
     <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
