implemented theme layout

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/NetCoreCMS.Modules.Cms.csproj
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/NetCoreCMS.Modules.Cms.csproj
@@ -48,6 +48,9 @@
     <Content Include="Views\Account\VerifyCode.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Include="Views\CmsHome\ResourceNotFound.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="Views\ManageAccount\AddPhoneNumber.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
