--- a/NetCoreCMS.Web/Themes/Default/Default.csproj
+++ b/NetCoreCMS.Web/Themes/Default/Default.csproj
@@ -26,4 +26,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\NetCoreCMS.Framework\NetCoreCMS.Framework.csproj" />
+  </ItemGroup>
+
 </Project>
