Showing modules list. And setup is no longer a module. Moved into web project.

--- a/NetCoreCMS.Web/NetCoreCMS.Web.csproj
+++ b/NetCoreCMS.Web/NetCoreCMS.Web.csproj
@@ -79,6 +79,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\Home\SetupSuccess.cshtml" />
+    <None Include="Views\SetupHome\CreateAdmin.cshtml" />
+    <None Include="Views\SetupHome\Index.cshtml" />
+    <None Include="Views\SetupHome\Success.cshtml" />
+    <None Include="wwwroot\css\SetupStyle.css" />
+    <None Include="wwwroot\js\Setup.js" />
   </ItemGroup>
 
 </Project>
