--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/NetCoreCMS.Modules.Setup.csproj
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Setup/NetCoreCMS.Modules.Setup.csproj
@@ -18,7 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
