Working on slider module

--- a/NetCoreCMS.Web/Themes/NccSeventeen/NccSeventeen.csproj
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/NccSeventeen.csproj
@@ -33,6 +33,9 @@
     <Content Include="Shared\Layouts\_NoTopLayout.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Include="Shared\Layouts\_HomeLayout.cshtml">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <Content Include="Shared\_SiteLoginPartial.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
