Nuget package version added in framework project file.

--- a/NetCoreCMS.Framework/NetCoreCMS.Framework.csproj
+++ b/NetCoreCMS.Framework/NetCoreCMS.Framework.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <PackageId>NetCoreCMS.Framework</PackageId>
+    <PackageVersion>1.0.1</PackageVersion>
+    <Authors>NetCoreCMS</Authors>
+    <Description>Application framework for NetCoreCMS</Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>Beta release</PackageReleaseNotes>
+    <Copyright>Copyright 2017 (c) NetCoreCMS. All rights reserved.</Copyright>
+    <PackageTags></PackageTags>
   </PropertyGroup>
   
   <PropertyGroup>
