Image Slider module complete.  - Settings page  - Widget this module developed using settings table only.

--- a/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/NetCoreCMS.ImageSlider.csproj
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/NetCoreCMS.ImageSlider.csproj
@@ -20,5 +20,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\NetCoreCMS.Framework\NetCoreCMS.Framework.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Repository\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 
 </Project>
